packages/components/src/components/post-header/post-header.scss
@use '@swisspost/design-system-styles/variables/commons';
@use '@swisspost/design-system-styles/variables/animation';
@use '@swisspost/design-system-styles/variables/elevation';
@use '@swisspost/design-system-styles/mixins/media' as media-mx;
@use '@swisspost/design-system-styles/components/header/mixins' as header-mx;
@use './custom-properties';

*,
::before,
::after {
  box-sizing: border-box;
}

:host,
header,
.global-header,
.local-header {
  transition: inset-block-start animation.$transition-time-simple
    animation.$transition-easing-default;
}

.section,
.sliding-controls {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: var(--post-header-gap);
  flex-wrap: wrap;
}

.section {
  max-width: var(--post-header-content-max-width);
  margin-inline: auto;
}

:host {
  display: block;
  position: sticky;
  inset-block-start: var(--post-header-top);
  z-index: commons.$zindex-header;
  box-shadow: elevation.$elevation-300;
}

.global-header {
  z-index: 2; // local header should slide bellow the global header
  position: sticky;
  inset-block-start: var(--post-global-header-top);
  background-color: #ffcc00;

  .section {
    height: var(--post-global-header-expanded-height);
    padding-inline-start: var(--post-global-header-padding-inline-start);
    padding-inline-end: var(--post-global-header-padding-inline-end);
  }

  .logo {
    align-self: flex-end;
    width: var(--post-global-header-expanded-height);
    height: var(--post-logo-height);
    min-height: var(--post-global-header-reduced-height);
    max-height: 100%;
    margin-inline-end: calc(1.25rem - var(--post-header-gap));
  }

  .sliding-controls {
    flex-grow: 1;
    justify-content: flex-end;
    position: relative;
    inset-block-start: var(--post-global-controls-top);
  }

  .audience {
    margin-inline-end: auto;
  }

  @include media-mx.max(desktop) {
    slot:where([name="audience"], [name="global-nav-secondary"]) {
      display: none;
    }
  }
}

.local-header {
  position: relative;
  background-color: #fff;
  min-height: var(--post-local-header-expanded-min-height);
  display: var(--post-local-header-display, flex);
  align-items: var(--post-local-header-align-items, center);

  .section {
    width: 100%;
    padding-inline-start: var(--post-local-header-padding-inline-start);
    padding-inline-end: var(--post-local-header-padding-inline-end);
    padding-block: var(--post-local-header-padding-block);

    @include media-mx.only(desktop) {
      display: grid;
      grid-template: var(--post-local-header-grid-template);
    }

    @include media-mx.max(desktop) {
      display: flex;
      align-self: center;

      @include media-mx.max(tablet) {
        justify-content: end;
      }
    }
  }

  &:where(.megadropdown-open),
  &:has(~ .burger-menu.extended) {
    &::after {
      content: '';
      display: block;
      position: absolute;
      inset-inline: 0;
      inset-block-end: 0;
      height: 1px;
      background-color: #e1e0dc;
    }
  }

  .local-nav {
    flex: 0 0 auto;
  }

  @include media-mx.max(desktop) {
    slot[name="main-nav"] {
      display: none;
    }
  }
}

.burger-button {
  @include header-mx.nav-item-base;
  display: var(--post-burger-button-display, flex);

  @include media-mx.only(mobile) {
    @include header-mx.nav-item-icon-only;
    padding: 0.625rem;
  }

  @include media-mx.only(desktop) {
    display: none;
  }
}

.burger-menu {
  z-index: -1; // burger-menu should slide bellow the local header
  position: absolute;
  inset-inline: 0;
  inset-block-start: 100%;
  height: calc(
    min(var(--post-header-scroll-parent-height, 100dvh), 100dvh) - var(--post-header-height)
  );
  overflow: hidden auto;
  display: flex;
  flex-direction: column;
  background-color: #fafafa;

  &.extended.second-level-open {
    overflow: hidden;
  }

  &:not(.extended) {
    transform: translateY(-100%);
    display: none;

    > * {
      display: none;
    }
  }

  .burger-menu-body,
  .burger-menu-footer {
    display: flex;
    flex-direction: column;
    padding-inline: var(--post-burger-menu-padding-inline);
  }

  .burger-menu-body {
    flex-grow: 1;
    padding-block: 1.5rem;
    gap: var(--post-burger-menu-body-gap);
  }

  .burger-menu-footer {
    background-color: #f0efed;
    padding-block: 1rem 1.5rem;
    gap: var(--post-burger-menu-footer-gap);
  }

  .local-nav {
    min-height: 3.5rem;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    padding-inline: 0.25rem;
  }
}

